--- a/sections/oupc/MemberSection/template.html
+++ b/sections/oupc/MemberSection/template.html
@@ -34,7 +34,8 @@
       <v-col cols="12" md="8" class="grey lighten-3">
         <v-sheet class="rounded-l" style="height: 100%">
           <v-row
-            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
+            class="d-flex justify-left flex-nowrap overflow-auto align-center ml-0 mr-0 white"
+            style="height: 100%"
           >
             <v-col
               cols="8"
@@ -42,7 +43,7 @@
               sm="8"
               md="8"
               lg="8"
-              xl="6"
+              xl="5"
               class=""
               v-for="member in members1"
               :key="member.txtBody"
@@ -94,7 +95,8 @@
       <v-col cols="12" md="8" class="grey lighten-3">
         <v-sheet class="rounded-l" style="height: 100%">
           <v-row
-            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
+            class="d-flex justify-left flex-nowrap overflow-auto align-center ml-0 mr-0 white"
+            style="height: 100%"
           >
             <v-col
               cols="8"
@@ -102,7 +104,7 @@
               sm="8"
               md="8"
               lg="8"
-              xl="6"
+              xl="5"
               class=""
               v-for="member in members2"
               :key="member.txtBody"
@@ -147,7 +149,8 @@
       <v-col cols="12" md="8" class="grey lighten-3">
         <v-sheet class="rounded-l" style="height: 100%">
           <v-row
-            class="d-flex justify-left flex-nowrap overflow-auto align-center mb-3 ml-0 mr-0 white"
+            class="d-flex justify-left flex-nowrap overflow-auto align-center ml-0 mr-0 white"
+            style="height: 100%"
           >
             <v-col
               cols="8"
@@ -155,7 +158,7 @@
               sm="8"
               md="8"
               lg="8"
-              xl="6"
+              xl="5"
               class=""
               v-for="member in members3"
               :key="member.txtBody"
