fix: key-visual-text size

--- a/sections/oupc/TopSection/template.html
+++ b/sections/oupc/TopSection/template.html
@@ -18,12 +18,12 @@
           <strong>リーダー部、吹奏部、チアリーダー部</strong
           ><br />の3部、16名で活動しています。
         </p>
-        <p
-          class="d-block font-weight-bold tiadic--text text--lighten-3 text-h1"
-        >
+      </h3>
+      <h2>
+        <p class="d-block font-weight-bold tiadic--text text--lighten-3">
           初心者大歓迎！!
         </p>
-      </h3>
+      </h2>
     </v-sheet>
   </v-container>
 
